# student-ai-impact-predictor

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
models/saved/: classification_threshold.json  model_metadata.json
notebooks/: 01_EDA.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_evaluation.ipynb  colab_training_pipeline.ipynb
reports/: improve_summary.md  model_card.md
src/data/: ingest.py  preprocess.py
src/evaluation/: metrics.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/utils/: helpers.py
src/visualization/: visualize.py
tests/: test_features.py  test_models.py  test_preprocess.py
