[project]
name = "impact-of-ai-on-students"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "nbconvert>=7.16.6",
    "numba>=0.57.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "shap>=0.44.1",
]
